--- a/roles/logstash/defaults/main.yml
+++ b/roles/logstash/defaults/main.yml
@@ -2,8 +2,8 @@
 # defaults file for logstash
 logstash_version: 1.5.0.beta1
 logstash_install_path: /opt
-logstash_s3_bucket: sps-build-deploy
-logstash_s3_base: /non-sps/elasticsearch/logstash/
+logstash_s3_bucket:
+logstash_s3_base:
 logstash_link: true
 logstash_remove_old: true
 logstash_setup_supervisor: true
@@ -14,3 +14,4 @@ logstash_conf_dir: /etc/logstash/conf.d
 logstash_opts:
 logstash_log_dir: /var/log/logstash
 logstash_java_home:
+logstash_state: present
