allow config file templating from external sources

--- a/roles/logstash/handlers/main.yml
+++ b/roles/logstash/handlers/main.yml
@@ -1,2 +1,4 @@
 ---
-# handlers file for example
+- name: Restart logstash with supervisorctl
+  supervisorctl: name=logstash state=restarted
+  when: logstash_autostart
