default version bump

--- a/test/test.yml
+++ b/test/test.yml
@@ -14,7 +14,7 @@
          java_s3_base: /non-sps/oracle/java/
                  }
      - { role: logstash,
-         logstash_version: 1.5.0.beta1,
+         logstash_version: 1.5.0.rc1.1,
          logstash_install_path: /opt,
          logstash_s3_bucket: sps-build-deploy,
          logstash_s3_base: /non-sps/elasticsearch/logstash/,
