--- a/roles/logstash/defaults/main.yml
+++ b/roles/logstash/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 # defaults file for logstash
-logstash_version: 1.5.0.beta1
+logstash_version: 1.5.0.rc1.1
 logstash_install_path: /opt
 logstash_s3_bucket:
 logstash_s3_base:
