--- a/roles/logstash/tasks/plugins.yml
+++ b/roles/logstash/tasks/plugins.yml
@@ -5,3 +5,9 @@
     JAVA_HOME: "{{ logstash_java_home }}"
   with_items: logstash_plugins
   when: logstash_plugins is defined
+
+- name: Updating plugins
+  shell: sudo -E -u logstash /opt/logstash-{{ logcentral_logstash_version | default('1.5.0.rc2') }}/bin/plugin update chdir=/opt/logstash-{{ logcentral_logstash_version | default('1.5.0.rc2') }}
+  environment:
+    JAVA_HOME: /opt/java/java8
+  when: logstash_plugins_update
